# felix

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_crates.md  config.toml  config.yaml  sixel_tempfile
.circleci/: config.yml
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: ci_test.yml  install_test.yml  installtest.yml  manual_test.yml  pr_test.yml  stale.yml
screenshots/: 1.sixel
src/: config.rs  entry.rs  errors.rs  functions.rs  help.rs  items.rs  jumplist.rs  layout.rs  lib.rs  lists.rs  magic_image.rs  magic_packed.rs  magicbytes.rs  main.rs  manipulation.rs  nums.rs  op.rs  run.rs  session.rs  shell.rs  start.rs  state.rs  term.rs
testfiles/archives/: archive.tar  archive.tar.bz2  archive.tar.xz  archive.tar.zst  archive.txt.xz  archive.txt.zst
testfiles/archives/tar/src/: help.rs  magicbytes.rs  run.rs  state.rs
testfiles/archives/xz/: multibytes.txt
testfiles/archives/zst/example/: op.rs  run.rs  term.rs
