[package]
name = "felix"
version = "2.11.1"
authors = ["Kyohei Uto <im@kyoheiu.dev>"]
edition = "2021"
description = "tui file manager with vim-like key mapping"
readme = "README.md"
repository = "https://github.com/kyoheiu/felix"
license = "MIT"
keywords = ["tui", "crossterm", "file-manager"]
categories = ["command-line-utilities", "filesystem"]
exclude = [
    "testfiles/*"
]

[[bin]]
name = "fx"
path = "src/main.rs"
test = true
bench = false

[dependencies]
dirs = "5.0.1"
walkdir = "2.3.3"
natord = "1.0.9"
log = "0.4.19"
simplelog = "0.12.1"
content_inspector = "0.2.4"
crossterm = "0.26.1"
serde_yaml = "0.9.25"
zip = "0.6.6"
tar = "0.4.39"
flate2 = "1.0.26"
lzma-rs = "0.3.0"
zstd = "0.12.4"
unicode-width = "0.1.10"
git2 = {version = "0.18.0", default-features = false }

[dev-dependencies]
bwrap = { version = "1.3.0", features = ["use_std"] }
devtimer = "4.0.1"
rayon = "1.7.0"

[target.'cfg(unix)'.dependencies]
nix = {version = "0.26.2", features = ["process"]}

[dependencies.serde]
version = "1.0.181"
features = ["derive"]

[dependencies.chrono]
version = "0.4.26"
default-features = false
features = ["clock"]
