[package]
name = "felix"
version = "2.15.0"
authors = ["Kyohei Uto <im@kyoheiu.dev>"]
edition = "2021"
description = "tui file manager with vim-like key mapping"
readme = "README.md"
repository = "https://github.com/kyoheiu/felix"
license = "MIT"
keywords = ["tui", "crossterm", "file-manager"]
categories = ["command-line-utilities", "filesystem"]
exclude = [
    "testfiles/*"
]

[[bin]]
name = "fx"
path = "src/main.rs"
test = true
bench = false

[dependencies]
dirs = "5.0.1"
walkdir = "2.5.0"
natord = "1.0.9"
log = "0.4.22"
simplelog = "0.12.2"
content_inspector = "0.2.4"
crossterm = "0.28.1"
serde_yaml = "0.9.34"
zip = "2.2.0"
tar = "0.4.42"
flate2 = "1.0.34"
lzma-rs = "0.3.0"
zstd = "0.13.2"
unicode-width = "0.2.0"
git2 = {version = "0.19.0", default-features = false }
normpath = "1.3.0"
tempfile = "3.15.0"

[dev-dependencies]
bwrap = { version = "1.3.0", features = ["use_std"] }
devtimer = "4.0.1"
rayon = "1.10.0"

[target.'cfg(unix)'.dependencies]
nix = {version = "0.29.0", features = ["process", "fs", "user"]}

[dependencies.serde]
version = "1.0.210"
features = ["derive"]

[dependencies.chrono]
version = "0.4.38"
default-features = false
features = ["clock"]
